# --- Workspace Settings ---

[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["EightFactorial"]
homepage = "https://github.com/EightFactorial/FrogLight-Server"
repository = "https://github.com/EightFactorial/FrogLight-Server"
readme = "README.md"

[workspace.lints.rust]
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_import_braces = "warn"
unreachable_pub = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
invalid_html_tags = "deny"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
unnecessary_cast = "warn"

[workspace.dependencies]
async-channel = "2.3.1"
async-std = "1.13.0"
bevy = { version = "0.15.0-rc.3", default-features = false, features = [
    "bevy_state",
] }
bitvec = "1.0.1"
bytemuck = { version = "1.20.0", features = ["latest_stable_rust"] }
compact_str = "0.8.0"
derive_more = { version = "1.0.0", features = ["full"] }
futures-lite = "2.5.0"
glam = "0.29.2"
hashbrown = "0.15.0"
parking_lot = "0.12.3"
simdnbt = "0.6.1"
thiserror = "1.0.69"
uuid = "1.11.0"

# --- FrogLight-Server Crate ---

[package]
name = "froglight-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
async-channel = { workspace = true }
async-std = { workspace = true }
bevy = { workspace = true }
compact_str = { workspace = true }
derive_more = { workspace = true }
froglight = { version = "0.1.0", path = "../FrogLight" }
parking_lot = { workspace = true }
