# --- Workspace Settings ---

[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["EightFactorial"]
homepage = "https://github.com/EightFactorial/FrogLight-Server"
repository = "https://github.com/EightFactorial/FrogLight-Server"
readme = "README.md"

[workspace.lints.rust]
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_import_braces = "warn"
unreachable_pub = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
invalid_html_tags = "deny"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
unnecessary_cast = "warn"

[workspace.dependencies]
async-channel = "2.3"
async-std = { version = "1.13", default-features = false }
bevy = { version = "0.15", default-features = false }
bevy_mod_debugdump = "0.12"
bitvec = "1.0"
bytemuck = { version = "1.20", features = ["latest_stable_rust"] }
compact_str = "0.8"
derive_more = { version = "1.0", features = ["full"] }
froglight = { version = "0.1.0", git = "https://github.com/EightFactorial/FrogLight", features = [
    "reflect",
] }
futures-lite = "2.5"
glam = "0.29"
hashbrown = "0.15"
parking_lot = "0.12"
simdnbt = "0.6.1"
thiserror = "1.0"
uuid = "1.11"

# --- FrogLight-Server Crate ---

[package]
name = "froglight-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[lib]
name = "froglight_server"
path = "src/lib/lib.rs"

[[bin]]
name = "froglight-server"
path = "src/main.rs"

[dev-dependencies]
bevy_mod_debugdump = { workspace = true }

[dependencies]
async-channel = { workspace = true }
async-std = { workspace = true, default-features = false }
bevy = { workspace = true }
compact_str = { workspace = true }
derive_more = { workspace = true }
froglight = { workspace = true }
futures-lite = { workspace = true }
parking_lot = { workspace = true }
simdnbt = { workspace = true }
